--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ add_library(boost_locale
   src/boost/locale/util/foreach_char.hpp
   src/boost/locale/util/info.cpp
   src/boost/locale/util/locale_data.cpp
+  src/boost/locale/util/make_std_unique.hpp
   src/boost/locale/util/numeric.hpp
   src/boost/locale/util/timezone.hpp
   ${headers}
