--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -111,11 +111,18 @@ environment:
 
     # (Currently) the images up to 2017 use an older Cygwin
     # This tests that the library works with more recent versions
-    - FLAVOR: cygwin (64-bit, latest)
+    - FLAVOR: cygwin (64-bit, latest) C++11
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
       ADDPATH: C:\cygwin64\bin;
       B2_ADDRESS_MODEL: 64
-      B2_CXXSTD: 11,1z
+      B2_CXXSTD: 11
+      B2_TOOLSET: gcc
+    # Split to avoid 1h timeout for multi-config runs
+    - FLAVOR: cygwin (64-bit, latest) C++17
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+      ADDPATH: C:\cygwin64\bin;
+      B2_ADDRESS_MODEL: 64
+      B2_CXXSTD: 1z
       B2_TOOLSET: gcc
 
     - FLAVOR: mingw64 (32-bit)
